--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 
 <html lang="en">
 
-<head></head>
-<body></body>
+<head>
+  <title> group40travel </title> 
+</head>
+<body>
+  <h1> test test </h1>  
+</body>
 
 </html>
