--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1> test test </h1>  
+  <nav class ="search">
+    <input type="text" id="destination" placeholder ="Destination" name = "destination">
+  </nav>  
 </body>
 
 </html>
