--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1> test test </h1>  
   <nav class ="search">
     <input type="text" id="destination" placeholder ="Destination" name = "destination">
+    <a href="#signin">Search</a>
   </nav>  
 </body>
 
