--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1> test test </h1>  
   <nav class ="search">
     <input type="text" id="destination" placeholder ="Destination" name = "destination">
-    <a href="#signin">Search</a>
+    <a href="#search">Search</a>
   </nav>  
 </body>
 
