aligned the tabs to the center

--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
   <!-- Tab links -->
 <div class="tab">
-    <button id="leisure" onclick="openCity(event, 'Leisure')"></button>
-    <button id="restaurants" onclick="openCity(event, 'Restaurants')"></button>
-    <button id="transportation" onclick="openCity(event, 'Transportation')"></button>
-    <button id="hotel" onclick="openCity(event, 'Hotels')"></button>
-    <button id="favLinks" onclick="openCity(event, 'Favourites')"></button>
+    <button id="leisure" onclick="openTab(event, 'Leisure')"></button>
+    <button id="restaurants" onclick="openTab(event, 'Restaurants')"></button>
+    <button id="transportation" onclick="openTab(event, 'Transportation')"></button>
+    <button id="hotel" onclick="openTab(event, 'Hotels')"></button>
+    <button id="favLinks" onclick="openTab(event, 'Favourites')"></button>
   </div>
   
   <!-- Tab content -->
