--- a/index.html
+++ b/index.html
@@ -11,11 +11,26 @@
 
 
 <body data-lang="english">
-  <h1> test test </h1>
-  <nav class="search">
+  <h1 id = "title"> TripToGo </h1>
+  <div id = "navBar">
+<!--    <nav class="search">-->
+<!--      <li><a href="default.asp">Home</a></li>-->
+<!--      <li><a href="news.asp">News</a></li>-->
+<!--      <li><a href="contact.asp">Contact</a></li>-->
+<!--      <li><a href="about.asp">About</a></li>-->
+<!--    </nav>-->
+    <ul class="search">
+      <li><a href="#contact">login</a></li>
+      <li><a href="#home">Home</a></li>
+    </ul>
+
+  </div>
+
+  <div id = searchBar>
     <input type="text" id="destination" placeholder="Destination" name="destination">
-    <a href="#search">Search</a>
-  </nav>
+<!--    <a href="#search">Search</a>-->
+    <button id = "searchButton">Search</button>
+  </div>
 
   <p onclick="changeLanguage('english')"> english <br></p>
   <p onclick="changeLanguage('dutch')"> dutch <br></p>
