some more changes

--- a/main.html
+++ b/main.html
@@ -31,8 +31,13 @@
         <input type="text" id="destination" placeholder ="Destination" name = "destination">
         <a href="#search">Search</a>
       </nav> 
-    <h3>Restaurants</h3>
-    <p>All the Restaurants are suggested here</p>
+    <section id="Grieks">
+      <h4>Grieks Restaurant Alexandros</h4>
+      <p> stuff stuff stuff</p>
+      <button id="like" onclick="openTab(event, 'Like')"></button>
+      <button id="book" onclick="openTab(event, 'Book')">Book</button>
+    </section>
+    
   </div>
   
   <div id="Transportation" class="tabcontent">
