--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id = searchBar>
     <input type="text" id="destination" placeholder="Destination" name="destination">
 <!--    <a href="#search">Search</a>-->
-    <button id = "searchButton">Search</button>
+    <button id = "searchButton" onclick="location.href='main.html';">Search</button>
   </div>
 
   <p onclick="changeLanguage('english')"> english <br></p>
