--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
   <h1 id = "title"> TripToGo </h1>
 
   <div id = searchBar>
-    <input type="text" id="destination" placeholder="Destination" name="destination">
+    <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
+    <input type="text" class ="dutch" id="destination" placeholder="Bestemming" name="destination">
 <!--    <a href="#search">Search</a>-->
-    <button id = "searchButton" onclick="location.href='main.html';">Search</button>
+    <button class ="english" id = "searchButton" onclick="location.href='main.html';">Search</button>
+    <button class ="dutch" id = "searchButton" onclick="location.href='main.html';">Zoek</button>
   </div>
 
   <p onclick="changeLanguage('english')"> english <br></p>
