--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
     <input type="text" class ="dutch" id="destination" placeholder="Bestemming" name="destination">
 <!--    <a href="#search">Search</a>-->
-    <button class ="english" id = "searchButton" onclick="location.href='main.html';">Search</button>
-    <button class ="dutch" id = "searchButton" onclick="location.href='main.html';">Zoek</button>
+    <button id = "searchButton" onclick="location.href='main.html';">Search</button>
   </div>
 
   <p onclick="changeLanguage('english')"> english <br></p>
