--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
       <li><a href="#contact">login</a></li>
     </ul>
   </div>
-
+  <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
+  <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
   <h1 id = "title"> TripToGo </h1>
 
   <div id = searchBar>
     <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
     <input type="text" class ="dutch" id="destination" placeholder="Bestemming" name="destination">
 <!--    <a href="#search">Search</a>-->
-    <button id = "searchButton" onclick="location.href='main.html';">Search</button>
+    <button id = "searchButton" onclick="location.href='main.html';"><none class="english">Search</none><none class="dutch">Zoek</none></button>
+
   </div>
 
-  <p onclick="changeLanguage('english')"> english <br></p>
-  <p onclick="changeLanguage('dutch')"> dutch <br></p>
+ 
 
 
   <p class="english">ENGLISH TEXT <br></p>
