--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <title> group40travel </title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  <script>
+    $( function() {
+      $( "#slider-range" ).slider({
+        range: true,
+        min: 0,
+        max: 5,
+        values: [ 0, 5 ],
+        slide: function( event, ui ) {
+          $( "#amount" ).val( "" + ui.values[ 0 ] + " - " + ui.values[ 1 ] );
+        }
+      });
+      $( "#amount" ).val( "" + $( "#slider-range" ).slider( "values", 0 ) +
+        " - " + $( "#slider-range" ).slider( "values", 1 ) );
+    } );
+  </script>
+    <script>
+      $( function() {
+        $( "#slider-range2" ).slider({
+          range: true,
+          min: 0,
+          max: 500,
+          values: [ 0, 500 ],
+          slide: function( event, ui ) {
+            $( "#amount2" ).val( "" + ui.values[ 0 ] + "km - " + ui.values[ 1 ] + "km");
+          }
+        });
+        $( "#amount2" ).val( "" + $( "#slider-range2" ).slider( "values", 0 ) +
+          "km - " + $( "#slider-range2" ).slider( "values", 1 ) +"km");
+      } );
+  </script>
 </head>
 
 
@@ -39,6 +73,130 @@
 
   <p class="english">ENGLISH TEXT <br></p>
   <p class="dutch" >DUTCH TEXT <br></p>
+  <div class ="filter">
+    <div id="initialfilter">
+      <h>Filters</h>
+      <button onclick ="hidenshow()" id="filterbtn" type="submit"><img src="filter.jpg" alt="Submit"></button>
+    </div>
+    <div class="hiddenfilters" style="display: none" id = "filters">
+      <div id ="checkboxes" class="checkboxes">
+        <h>Filters</h>
+        <button onclick ="hidenshow2()" id="filterbtn2" type="submit"><img src="filter.jpg" alt="Submit"></button>
+        <div id = "hidefilters">
+          <div>
+            <input type="checkbox" id="learning" name="interest" value="learning" />
+            <label for="learning">Learning oppurtunities</label>
+          </div>
+          <div>
+            <input type="checkbox" id="child" name="interest" value="child" />
+            <label for="child">Childfriendly</label>
+          </div>
+          <div>
+            <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
+            <label for="wheelchair">wheelchair accessible</label>
+          </div>
+          <div>
+              <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
+              <label for="alcohol">alcohol</label>
+          </div>
+          <div>
+            <input type="checkbox" id="pet" name="interest" value="pet" />
+            <label for="pet">petfriendly</label>
+          </div>
+          <div>
+            <input type="checkbox" id="romantic" name="interest" value="romantic" />
+            <label for="romantic">romantic</label>
+          </div>
+          <div>
+            <input type="checkbox" id="safe" name="interest" value="safe" />
+            <label for="safe">Safety</label>
+          </div>
+          <div>
+            <input type="checkbox" id="group" name="interest" value="group" />
+            <label for="group">group-oriented</label>
+          </div>                
+        </div>
+      </div>
+
+      <div id = "ranges">
+        <h2>Rating</h2>
+        <p>
+          <input type="text" id="amount">
+        </p>
+        <div id="slider-range"></div>
+        <h2>Distance</h2>
+        <p>
+          <input type="text" id="amount2">
+        </p>
+        <div id="slider-range2"></div>
+
+      </div>
+      <div id="sort" class ="sort">
+        <h>Sort</h>
+        <button onclick ="hidenshowsort()" id="sortbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
+        <div id = sortby>
+        <div>
+          <input type="checkbox" id="recommendation" name="sorting" value="recommendation" />
+          <label for="recommendation">recommendation</label>
+        </div>
+        <div>
+          <input type="checkbox" id="price" name="sorting" value="price" />
+          <label for="price">price</label>
+        </div>
+        <div>
+          <input type="checkbox" id="rating" name="sorting" value="rating" />
+          <label for="rating">rating</label>
+        </div>
+        <div>
+          <input type="checkbox" id="distance" name="sorting" value="distance" />
+          <label for="distance">distance</label>
+        </div>              
+      </div>
+      </div>
+    </div>
+  </div>
+  <script>
+    function hidenshow(){
+      var x = document.getElementById("filters");
+      var y = document.getElementById("initialfilter");
+      if (y.style.display === "none") {
+        y.style.display = "block";
+      } else {
+        y.style.display = "none";
+      }      
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script>
+    <script>
+      function hidenshow2(){
+        var x = document.getElementById("hidefilters");
+        var y = document.getElementById("ranges");
+        if (x.style.display === "none") {
+          x.style.display = "block";
+        } else {
+          x.style.display = "none";
+        }
+        if (y.style.display === "none") {
+          y.style.display = "block";
+        } else {
+          y.style.display = "none";
+        }     
+      }
+    </script>
+  <script>
+    function hidenshowsort(){
+      var x = document.getElementById("sortby");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script>
   <script>
     function changeLanguage(newLanguage) {
       document.body.dataset.lang=newLanguage;
