--- a/index.html
+++ b/index.html
@@ -60,98 +60,97 @@
   <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
   <h1 id = "title"> TripToGo </h1>
 
-  <div id = searchBar>
-    <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
-    <input type="text" class ="dutch" id="destination" placeholder="Bestemming" name="destination">
-<!--    <a href="#search">Search</a>-->
-    <button id = "searchButton" onclick="location.href='main.html';"><none class="english">Search</none><none class="dutch">Zoek</none></button>
-
-  </div>
-
- 
-
-
-  <p class="english">ENGLISH TEXT <br></p>
-  <p class="dutch" >DUTCH TEXT <br></p>
-  <div class ="filter">
-    <div id="initialfilter">
-      <h>Filters</h>
-      <button onclick ="hidenshow()" id="filterbtn" type="submit"><img src="filter.jpg" alt="Submit"></button>
+  <div id="content">
+    <div id="searchBar">
+      <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
+      <input type="text" class ="dutch" id="destination" placeholder="Bestemming" name="destination">
+      <button id = "searchButton" onclick="location.href='main.html';">
+        <none class="english">Search</none>
+        <none class="dutch">Zoek</none>
+      </button>
     </div>
-    <div class="hiddenfilters" style="display: none" id = "filters">
-      <div id ="checkboxes" class="checkboxes">
+
+
+    <div class ="filter">
+      <div id="initialfilter">
         <h>Filters</h>
-        <button onclick ="hidenshow2()" id="filterbtn2" type="submit"><img src="filter.jpg" alt="Submit"></button>
-        <div id = "hidefilters">
-          <div>
-            <input type="checkbox" id="learning" name="interest" value="learning" />
-            <label for="learning">Learning oppurtunities</label>
-          </div>
-          <div>
-            <input type="checkbox" id="child" name="interest" value="child" />
-            <label for="child">Childfriendly</label>
-          </div>
-          <div>
-            <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
-            <label for="wheelchair">wheelchair accessible</label>
-          </div>
-          <div>
-              <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
-              <label for="alcohol">alcohol</label>
-          </div>
-          <div>
-            <input type="checkbox" id="pet" name="interest" value="pet" />
-            <label for="pet">petfriendly</label>
-          </div>
-          <div>
-            <input type="checkbox" id="romantic" name="interest" value="romantic" />
-            <label for="romantic">romantic</label>
-          </div>
-          <div>
-            <input type="checkbox" id="safe" name="interest" value="safe" />
-            <label for="safe">Safety</label>
-          </div>
-          <div>
-            <input type="checkbox" id="group" name="interest" value="group" />
-            <label for="group">group-oriented</label>
-          </div>                
-        </div>
+        <button onclick ="hidenshow()" id="filterbtn" type="submit"><img src="filter.jpg" alt="Submit"></button>
       </div>
+      <div class="hiddenfilters" style="display: none" id = "filters">
+        <div id ="checkboxes" class="checkboxes">
+          <h>Filters</h>
+          <button onclick ="hidenshow2()" id="filterbtn2" type="submit"><img src="filter.jpg" alt="Submit"></button>
+          <div id = "hidefilters">
+            <div>
+              <input type="checkbox" id="learning" name="interest" value="learning" />
+              <label for="learning">Learning oppurtunities</label>
+            </div>
+            <div>
+              <input type="checkbox" id="child" name="interest" value="child" />
+              <label for="child">Childfriendly</label>
+            </div>
+            <div>
+              <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
+              <label for="wheelchair">wheelchair accessible</label>
+            </div>
+            <div>
+                <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
+                <label for="alcohol">alcohol</label>
+            </div>
+            <div>
+              <input type="checkbox" id="pet" name="interest" value="pet" />
+              <label for="pet">petfriendly</label>
+            </div>
+            <div>
+              <input type="checkbox" id="romantic" name="interest" value="romantic" />
+              <label for="romantic">romantic</label>
+            </div>
+            <div>
+              <input type="checkbox" id="safe" name="interest" value="safe" />
+              <label for="safe">Safety</label>
+            </div>
+            <div>
+              <input type="checkbox" id="group" name="interest" value="group" />
+              <label for="group">group-oriented</label>
+            </div>                
+          </div>
+        </div>
 
-      <div id = "ranges">
-        <h2>Rating</h2>
-        <p>
-          <input type="text" id="amount">
-        </p>
-        <div id="slider-range"></div>
-        <h2>Distance</h2>
-        <p>
-          <input type="text" id="amount2">
-        </p>
-        <div id="slider-range2"></div>
+        <div id = "ranges">
+          <h2>Rating</h2>
+          <p>
+            <input type="text" id="amount">
+          </p>
+          <div id="slider-range"></div>
+          <h2>Distance</h2>
+          <p>
+            <input type="text" id="amount2">
+          </p>
+          <div id="slider-range2"></div>
 
-      </div>
-      <div id="sort" class ="sort">
-        <h>Sort</h>
-        <button onclick ="hidenshowsort()" id="sortbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
-        <div id = sortby>
-        <div>
-          <input type="checkbox" id="recommendation" name="sorting" value="recommendation" />
-          <label for="recommendation">recommendation</label>
         </div>
-        <div>
-          <input type="checkbox" id="price" name="sorting" value="price" />
-          <label for="price">price</label>
+        <div id="sort" class ="sort">
+          <h>Sort</h>
+          <button onclick ="hidenshowsort()" id="sortbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
+          <div id = sortby>
+          <div>
+            <input type="checkbox" id="recommendation" name="sorting" value="recommendation" />
+            <label for="recommendation">recommendation</label>
+          </div>
+          <div>
+            <input type="checkbox" id="price" name="sorting" value="price" />
+            <label for="price">price</label>
+          </div>
+          <div>
+            <input type="checkbox" id="rating" name="sorting" value="rating" />
+            <label for="rating">rating</label>
+          </div>
+          <div>
+            <input type="checkbox" id="distance" name="sorting" value="distance" />
+            <label for="distance">distance</label>
+          </div>              
         </div>
-        <div>
-          <input type="checkbox" id="rating" name="sorting" value="rating" />
-          <label for="rating">rating</label>
         </div>
-        <div>
-          <input type="checkbox" id="distance" name="sorting" value="distance" />
-          <label for="distance">distance</label>
-        </div>              
-      </div>
       </div>
     </div>
   </div>
