--- a/main.html
+++ b/main.html
@@ -224,23 +224,23 @@ $( function() {
                 <h>Sort</h>
                 </div>
                 <div>
-                <button onclick ="hidenshowsort()" id="sortbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
+                <button onclick ="hidenshowsort()" id="srtbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
                 </div>
-                <div id = sortby>
+                <div id = srtby>
                 <div>
-                  <input type="checkbox" id="recommendation" name="sorting" value="recommendation" />
+                  <input type="radio" id="recommendation" name="sorting" value="recommendation" />
                   <label for="recommendation">recommendation</label>
                 </div>
                 <div>
-                  <input type="checkbox" id="price" name="sorting" value="price" />
+                  <input type="radio" id="price" name="sorting" value="price" />
                   <label for="price">price</label>
                 </div>
                 <div>
-                  <input type="checkbox" id="rating" name="sorting" value="rating" />
+                  <input type="radio" id="rating" name="sorting" value="rating" />
                   <label for="rating">rating</label>
                 </div>
                 <div>
-                  <input type="checkbox" id="distance" name="sorting" value="distance" />
+                  <input type="radio" id="distance" name="sorting" value="distance" />
                   <label for="distance">distance</label>
                 </div>              
               </div>
@@ -331,23 +331,23 @@ $( function() {
             <h>Sort</h>
             </div>
             <div>
-            <button onclick ="hidenshowsort2()" id="sortbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
+            <button onclick ="hidenshowsort2()" id="srtbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
             </div>
-            <div id = sortby2>
+            <div id = srtby2>
             <div>
-              <input type="checkbox" id="recommendation" name="sorting" value="recommendation" />
+              <input type="radio" id="recommendation" name="sorting" value="recommendation" />
               <label for="recommendation">recommendation</label>
             </div>
             <div>
-              <input type="checkbox" id="price" name="sorting" value="price" />
+              <input type="radio" id="price" name="sorting" value="price" />
               <label for="price">price</label>
             </div>
             <div>
-              <input type="checkbox" id="rating" name="sorting" value="rating" />
+              <input type="radio" id="rating" name="sorting" value="rating" />
               <label for="rating">rating</label>
             </div>
             <div>
-              <input type="checkbox" id="distance" name="sorting" value="distance" />
+              <input type="radio" id="distance" name="sorting" value="distance" />
               <label for="distance">distance</label>
             </div>              
           </div>
@@ -438,23 +438,23 @@ $( function() {
             <h>Sort</h>
             </div>
             <div>
-            <button onclick ="hidenshowsort3()" id="sortbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
+            <button onclick ="hidenshowsort3()" id="srtbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
             </div>
-            <div id = sortby3>
+            <div id = srtby3>
             <div>
-              <input type="checkbox" id="recommendation" name="sorting" value="recommendation" />
+              <input type="radio" id="recommendation" name="sorting" value="recommendation" />
               <label for="recommendation">recommendation</label>
             </div>
             <div>
-              <input type="checkbox" id="price" name="sorting" value="price" />
+              <input type="radio" id="price" name="sorting" value="price" />
               <label for="price">price</label>
             </div>
             <div>
-              <input type="checkbox" id="rating" name="sorting" value="rating" />
+              <input type="radio" id="rating" name="sorting" value="rating" />
               <label for="rating">rating</label>
             </div>
             <div>
-              <input type="checkbox" id="distance" name="sorting" value="distance" />
+              <input type="radio" id="distance" name="sorting" value="distance" />
               <label for="distance">distance</label>
             </div>              
           </div>
@@ -545,23 +545,23 @@ $( function() {
             <h>Sort</h>
             </div>
             <div>
-            <button onclick ="hidenshowsort4()" id="sortbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
+            <button onclick ="hidenshowsort4()" id="srtbtn" type="submit"><img src="sort.jpg" alt="Submit"></button>
             </div>
-            <div id = sortby4>
+            <div id = srtby4>
             <div>
-              <input type="checkbox" id="recommendation" name="sorting" value="recommendation" />
+              <input type="radio" id="recommendation" name="sorting" value="recommendation" />
               <label for="recommendation">recommendation</label>
             </div>
             <div>
-              <input type="checkbox" id="price" name="sorting" value="price" />
+              <input type="radio" id="price" name="sorting" value="price" />
               <label for="price">price</label>
             </div>
             <div>
-              <input type="checkbox" id="rating" name="sorting" value="rating" />
+              <input type="radio" id="rating" name="sorting" value="rating" />
               <label for="rating">rating</label>
             </div>
             <div>
-              <input type="checkbox" id="distance" name="sorting" value="distance" />
+              <input type="radio" id="distance" name="sorting" value="distance" />
               <label for="distance">distance</label>
             </div>              
           </div>
