update for login page and css file

--- a/login.html
+++ b/login.html
@@ -9,14 +9,17 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
-<body>
-    <div class="loginBox">
-        <div id="register">
+    <div class="loginBox" >
+        <h1>Login</h1>
 
-        </div>
-        <div id="login">
+        <h3>Email : </h3>
+        <input type="email" name="" placeholder="Type your email">
+        <h3>Password : </h3>
+        <input type="password" name="" placeholder="Type your password">
 
-        </div>
+        <button onclick="location.href='index.html';">LOGIN</button>
+
     </div>
+
 </body>
 </html>
