link login page from index.html

--- a/index.html
+++ b/index.html
@@ -46,14 +46,8 @@
 
 <body data-lang="english">
   <div id = "navBar">
-<!--    <nav class="search">-->
-<!--      <li><a href="default.asp">Home</a></li>-->
-<!--      <li><a href="news.asp">News</a></li>-->
-<!--      <li><a href="contact.asp">Contact</a></li>-->
-<!--      <li><a href="about.asp">About</a></li>-->
-<!--    </nav>-->
     <ul class="search">
-      <li><a href="#contact">login</a></li>
+      <li><a onclick="location.href='login.html';">login</a></li>
     </ul>
   </div>
   <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
