shearch box css : all element in the same Lines location of the searchbox, border, background

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 
 <body data-lang="english">
-  <div id = "navBar">
+  <!-- <div id = "navBar"> -->
     <ul class="search">
       <li><a onclick="location.href='login.html';">login</a></li>
     </ul>
-  </div>
+  <!-- </div> -->
   <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
   <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
   <h1 id = "title"> TripToGo </h1>
@@ -57,9 +57,7 @@
   <div id = searchBar>
     <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
     <input type="text" class ="dutch" id="destination" placeholder="Bestemming" name="destination">
-<!--    <a href="#search">Search</a>-->
     <button id = "searchButton" onclick="location.href='main.html';"><none class="english">Search</none><none class="dutch">Zoek</none></button>
-
   </div>
 
  
