Chages in filter css

--- a/main.html
+++ b/main.html
@@ -131,6 +131,7 @@ $( function() {
 </script>
 </head>
 <body>
+  <h1 id = "title"> TripToGo </h1>
   <!-- Tab links -->
 <div class="tab">
     <button id="home" onclick="location.href='index.html';">Home</button>
