--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
-<h1 id = "title"> TripToGo </h1>
+<h1 id = "title" onclick="location.href='index.html';"> TripToGo </h1>
     <div class="loginBox">
         <h1>Login</h1>
 
