--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
 
 <body data-lang="english">
   
-  <!-- <div id = "navBar"> -->
+  <!--
     <ul class="search">
       <li><a onclick="location.href='login.html';">login</a></li>
     </ul>
-  <!-- </div> -->
+  -->
   <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
   <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
+  <p id="log_button" onclick="location.href='login.html'"></p>
   <h1 id = "title"> TripToGo </h1>
   <div class="content">
     <div id = searchBar>
