--- a/index.html
+++ b/index.html
@@ -43,16 +43,10 @@
 
 
 <body data-lang="english">
-  
-  <!--
-    <ul class="search">
-      <li><a onclick="location.href='login.html';">login</a></li>
-    </ul>
-  -->
+  <p id="log_button" onclick="location.href='login.html'"></p>
   <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
   <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
-  <p id="log_button" onclick="location.href='login.html'"></p>
-  <h1 id = "title"> TripToGo </h1>
+  <img src="img/logo.png" onclick="location.href='index.html'" style="height:104px;">
   <div class="content">
     <div id = searchBar>
       <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
