--- a/main.html
+++ b/main.html
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-  <h1 id = "title" onclick="location.href='index.html';"> TripToGo </h1>
+  <p id="log_button" onclick="location.href='login.html'"></p>
+  <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
+  <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
+  <img src="img/logo.png" onclick="location.href='index.html'" style="height:104px;">
+
 
     <!-- Tab links -->
   <div class="tab">
