porting to img folder

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <div class ="filter">
       <div id="initialfilter">
         <h3>Filters</h3>
-        <button onclick ="hidenshow()" id="filterbtn" type="submit"><img src="filter.jpg" alt="Submit"></button>
+        <button onclick ="hidenshow()" id="filterbtn" type="submit"><img src="img/filter.jpg" alt="Submit"></button>
       </div>
       <div class="hiddenfilters" style="display: none" id = "filters">
         <div id ="checkboxes" class="checkboxes">
           <h3>Filters</h3>
-          <!-- <button onclick ="hidenshow2()" id="filterbtn2" type="submit"><img src="filter.jpg" alt="Submit"></button> -->
+          <!-- <button onclick ="hidenshow2()" id="filterbtn2" type="submit"><img src="img/filter.jpg" alt="Submit"></button> -->
           <div id = "hidefilters">
             <div>
               <input type="checkbox" id="learning" name="interest" value="learning" checked ="checked"/>
@@ -124,7 +124,7 @@
         
         <div id="sort" class ="sort">
           <h3>Sort</h3>
-          <!-- <button onclick ="hidenshowsort()" id="srtbtn" type="submit"><img src="sort.jpg" alt="Submit"></button> -->
+          <!-- <button onclick ="hidenshowsort()" id="srtbtn" type="submit"><img src="img/sort.jpg" alt="Submit"></button> -->
           <div id = srtby>
             <div>
               <input type="radio" id="recommendation" name="sorting" value="recommendation" checked = "checked" />
