--- a/index.html
+++ b/index.html
@@ -44,68 +44,111 @@
 
 <body data-lang="english">
   <p id="log_button" onclick="location.href='login.html'"></p>
-  <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
-  <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
+  <p id="eng_button" onclick="changeLanguage('english')"><br></p>
+  <p id="dut_button" onclick="changeLanguage('dutch')"><br></p>
   <img src="img/logo.png" onclick="location.href='index.html'" style="height:104px;">
   <div class="content">
-    <div id = searchBar>
-      <input type="text" class ="english" id="destination" placeholder="Destination" name="destination">
-      <input type="text" class ="dutch" id="destination" placeholder="Bestemming" name="destination">
-      <button id = "searchButton" onclick="location.href='main.html';"><none class="english">Search</none><none class="dutch">Zoek</none></button>
+    <div id=searchBar>
+      <input type="text" class="english" id="destination" placeholder="Destination" name="destination">
+      <input type="text" class="dutch" id="destination" placeholder="Bestemming" name="destination">
+      <button id="searchButton" onclick="location.href='main.html';">
+        <none class="english">Search</none>
+        <none class="dutch">Zoek</none>
+      </button>
     </div>
-    <div class ="filter">
+    <div class="filter">
       <div id="initialfilter">
         <h3>Filters</h3>
-        <button onclick ="hidenshow()" id="filterbtn" type="submit"><img src="img/filter.jpg" alt="Submit"></button>
+        <button onclick="hidenshow()" id="filterbtn" type="submit"><img src="img/filter.jpg" alt="Submit"></button>
       </div>
-      <div class="hiddenfilters" style="display: none" id = "filters">
-        <div id ="checkboxes" class="checkboxes">
+      <div class="hiddenfilters" style="display: none" id="filters">
+        <div id="checkboxes" class="checkboxes">
           <h3>Filters</h3>
           <!-- <button onclick ="hidenshow2()" id="filterbtn2" type="submit"><img src="img/filter.jpg" alt="Submit"></button> -->
-          <div id = "hidefilters">
-            <div>
-              <input type="checkbox" id="learning" name="interest" value="learning" checked ="checked"/>
-              <label for="learning">Learning oppurtunities</label>
-            </div>
-            <div>
-              <input type="checkbox" id="child" name="interest" value="child" />
-              <label for="child">Childfriendly</label>
-            </div>
-            <div>
-              <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
-              <label for="wheelchair">wheelchair accessible</label>
-            </div>
-            <div>
+          <div id="hidefilters">
+            <div class=english>
+              <div>
+                <input type="checkbox" id="learning" name="interest" value="learning" checked="checked" />
+                <label for="learning">Learning oppurtunities</label>
+              </div>
+              <div>
+                <input type="checkbox" id="child" name="interest" value="child" />
+                <label for="child">Childfriendly</label>
+              </div>
+              <div>
+                <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
+                <label for="wheelchair">wheelchair accessible</label>
+              </div>
+              <div>
                 <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
                 <label for="alcohol">alcohol</label>
+              </div>
+              <div>
+                <input type="checkbox" id="pet" name="interest" value="pet" />
+                <label for="pet">petfriendly</label>
+              </div>
+              <div>
+                <input type="checkbox" id="romantic" name="interest" value="romantic" />
+                <label for="romantic">romantic</label>
+              </div>
+              <div>
+                <input type="checkbox" id="safe" name="interest" value="safe" />
+                <label for="safe">Safety</label>
+              </div>
+              <div>
+                <input type="checkbox" id="group" name="interest" value="group" />
+                <label for="group">group-oriented</label>
+              </div>
             </div>
-            <div>
-              <input type="checkbox" id="pet" name="interest" value="pet" />
-              <label for="pet">petfriendly</label>
+            <div class=dutch>
+              <div>
+                <input type="checkbox" id="learning" name="interest" value="learning" checked="checked" />
+                <label for="learning">Leerzaam</label>
+              </div>
+              <div>
+                <input type="checkbox" id="child" name="interest" value="child" />
+                <label for="child">Kindvriendelijk</label>
+              </div>
+              <div>
+                <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
+                <label for="wheelchair">Rolstoeltoegankelijk</label>
+              </div>
+              <div>
+                <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
+                <label for="alcohol">alcohol</label>
+              </div>
+              <div>
+                <input type="checkbox" id="pet" name="interest" value="pet" />
+                <label for="pet">diervriendelijk</label>
+              </div>
+              <div>
+                <input type="checkbox" id="romantic" name="interest" value="romantic" />
+                <label for="romantic">romantisch</label>
+              </div>
+              <div>
+                <input type="checkbox" id="safe" name="interest" value="safe" />
+                <label for="safe">veligheid</label>
+              </div>
+              <div>
+                <input type="checkbox" id="group" name="interest" value="group" />
+                <label for="group">groepsgeorienteerd</label>
+              </div>
             </div>
-            <div>
-              <input type="checkbox" id="romantic" name="interest" value="romantic" />
-              <label for="romantic">romantic</label>
-            </div>
-            <div>
-              <input type="checkbox" id="safe" name="interest" value="safe" />
-              <label for="safe">Safety</label>
-            </div>
-            <div>
-              <input type="checkbox" id="group" name="interest" value="group" />
-              <label for="group">group-oriented</label>
-            </div>                
           </div>
         </div>
-        
-        <div class="indexPage" id = "ranges">
-          <h3>Rating</h3>
-          <input type="range" min="0" max="5" value="1" step="1" id="ratingRange">
-          <p><span id="rangeValue"></span> star</p>
 
-          <h3>Distance</h3>
+        <div class="indexPage" id="ranges">
+
+          <h3 class="english">Rating</h3>
+          <h3 class="dutch">Beoordeling</h3>
+          <input type="range" min="0" max="5" value="1" step="1" id="ratingRange">
+          <p><span id="rangeValue"></span> stars</p>
+
+          <h3 class="english">Distance</h3>
+          <h3 class="dutch">Afstand</h3>
           <input type="range" min="0" max="20" value="5" step="0.5" id="distanceRange">
           <p><span id="distanceValue"></span> km</p>
+
 
           <script>
             var ratingSlider = document.getElementById("ratingRange");
@@ -117,31 +160,51 @@
             ratingOutput.innerHTML = ratingSlider.value;
             distanceOutput.innerHTML = distanceSlider.value
 
-            ratingSlider.oninput = function() { ratingOutput.innerHTML = this.value; }
-            distanceSlider.oninput = function() { distanceOutput.innerHTML = this.value; }
+            ratingSlider.oninput = function () { ratingOutput.innerHTML = this.value; }
+            distanceSlider.oninput = function () { distanceOutput.innerHTML = this.value; }
           </script>
         </div>
-        
-        <div id="sort" class ="sort">
+
+        <div id="sort" class="sort">
           <h3>Sort</h3>
           <!-- <button onclick ="hidenshowsort()" id="srtbtn" type="submit"><img src="img/sort.jpg" alt="Submit"></button> -->
-          <div id = srtby>
-            <div>
-              <input type="radio" id="recommendation" name="sorting" value="recommendation" checked = "checked" />
-              <label for="recommendation">recommendation</label>
+          <div id=srtby>
+            <div class="english">
+              <div>
+                <input type="radio" id="recommendation" name="sorting" value="recommendation" checked="checked" />
+                <label for="recommendation">recommendation</label>
+              </div>
+              <div>
+                <input type="radio" id="price" name="sorting" value="price" />
+                <label for="price">price</label>
+              </div>
+              <div>
+                <input type="radio" id="rating" name="sorting" value="rating" />
+                <label for="rating">rating</label>
+              </div>
+              <div>
+                <input type="radio" id="distance" name="sorting" value="distance" />
+                <label for="distance">distance</label>
+              </div>
             </div>
-            <div>
-              <input type="radio" id="price" name="sorting" value="price" />
-              <label for="price">price</label>
+            <div class="dutch">
+              <div>
+                <input type="radio" id="recommendation" name="sorting" value="recommendation" checked="checked" />
+                <label for="recommendation">aanbevolen</label>
+              </div>
+              <div>
+                <input type="radio" id="price" name="sorting" value="price" />
+                <label for="price">prijs</label>
+              </div>
+              <div>
+                <input type="radio" id="rating" name="sorting" value="rating" />
+                <label for="rating">Beoordeling</label>
+              </div>
+              <div>
+                <input type="radio" id="distance" name="sorting" value="distance" />
+                <label for="distance">Afstand</label>
+              </div>
             </div>
-            <div>
-              <input type="radio" id="rating" name="sorting" value="rating" />
-              <label for="rating">rating</label>
-            </div>
-            <div>
-              <input type="radio" id="distance" name="sorting" value="distance" />
-              <label for="distance">distance</label>
-            </div>              
           </div>
         </div>
       </div>
