--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 
-<body>
+<body data-lang="english">
   <p id="log_button" onclick="location.href='login.html'"></p>
   <p id="eng_button" onclick="changeLanguage('english')"><br></p>
-  <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
+  <p id="dut_button" onclick="changeLanguage('dutch')"><br></p>
   <img src="img/logo.png" onclick="location.href='index.html'" style="height:104px;">
 
 
@@ -30,44 +30,80 @@
 
   <div class="mainPage">
     <div id="filterSection">
-      <h3>Sort</h3>
+      <h3><div class="english">Sort</div><div class="dutch">Sorteer</div></h3>
+      <!-- <h3 class="dutch">Sorteer</h3> -->
+
+
+
       <input type="radio" id="recommendation" name="sorting" value="recommendation" checked="checked" />
-      <label for="recommendation">Recommendation</label><br>
+      <label class="english" for="recommendation">Recommendation</label>
+      <label class="dutch" for="recommendation">aanbevolen</label><br>
 
       <input type="radio" id="price" name="sorting" value="price" />
-      <label for="price">Price</label><br>
+      <label class="english" for="price">Price</label>
+      <label class="dutch" for="price">prijs</label><br>
 
       <input type="radio" id="rating" name="sorting" value="rating" />
-      <label for="rating">Rating</label><br>
+      <label class="english" for="rating">Rating</label>
+      <label class="dutch" for="rating">Beoordeling</label><br>
 
       <input type="radio" id="distance" name="sorting" value="distance" />
-      <label for="distance">Distance</label>
+      <label class="english" for="distance">Distance</label>
+      <label class="dutch" for="rating">Afstand</label><br>
+
 
       <div id="filterDetailSection">
         <h3>Filter</h3>
-        <input type="checkbox" checked="checked">
-        <label class="container">Learning Opourtunity</label><br>
+        <div class="english">
+          <input type="checkbox" checked="checked">
+          <label class="container">Learning Opourtunity</label><br>
 
-        <input type="checkbox" id="child" name="interest" value="child" />
-        <label for="child">Childfriendly</label><br>
+          <input type="checkbox" id="child" name="interest" value="child" />
+          <label for="child">Childfriendly</label><br>
 
-        <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
-        <label for="wheelchair">Wheelchair accessible</label><br>
+          <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
+          <label for="wheelchair">Wheelchair accessible</label><br>
 
-        <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
-        <label for="alcohol">Alcohol</label><br>
+          <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
+          <label for="alcohol">Alcohol</label><br>
 
-        <input type="checkbox" id="pet" name="interest" value="pet" />
-        <label for="pet">Pet-friendly</label><br>
+          <input type="checkbox" id="pet" name="interest" value="pet" />
+          <label for="pet">Pet-friendly</label><br>
 
-        <input type="checkbox" id="romantic" name="interest" value="romantic" />
-        <label for="romantic">Romantic</label><br>
+          <input type="checkbox" id="romantic" name="interest" value="romantic" />
+          <label for="romantic">Romantic</label><br>
 
-        <input type="checkbox" id="safe" name="interest" value="safe" />
-        <label for="safe">Safety</label><br>
+          <input type="checkbox" id="safe" name="interest" value="safe" />
+          <label for="safe">Safety</label><br>
 
-        <input type="checkbox" id="group" name="interest" value="group" />
-        <label for="group">Group-oriented</label><br>
+          <input type="checkbox" id="group" name="interest" value="group" />
+          <label for="group">Group-oriented</label><br>
+        </div>
+        <div class="dutch">
+          <input type="checkbox" checked="checked">
+          <label class="container">Leerzaam</label><br>
+
+          <input type="checkbox" id="child" name="interest" value="child" />
+          <label for="child">Kindvriendelijk</label><br>
+
+          <input type="checkbox" id="wheelchair" name="interest" value="wheelchair" />
+          <label for="wheelchair">Rolstoeltoegankelijk</label><br>
+
+          <input type="checkbox" id="alcohol" name="interest" value="alcohol" />
+          <label for="alcohol">Alcohol</label><br>
+
+          <input type="checkbox" id="pet" name="interest" value="pet" />
+          <label for="pet">diervriendelijk</label><br>
+
+          <input type="checkbox" id="romantic" name="interest" value="romantic" />
+          <label for="romantic">romantisch</label><br>
+
+          <input type="checkbox" id="safe" name="interest" value="safe" />
+          <label for="safe">veligheid</label><br>
+
+          <input type="checkbox" id="group" name="interest" value="group" />
+          <label for="group">groepsgeorienteerd</label><br>
+        </div>
       </div>
 
       <h3>Rating</h3>
