--- a/register.html
+++ b/register.html
@@ -10,16 +10,19 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 <h1 id = "title" onclick="location.href='index.html';"> TripToGo </h1>
-    <div class="loginBox">
-        <h1>Login</h1>
+    <div class="registerBox">
+        <h1>Register</h1>
 
+        <h3>First Name : </h3>
+        <input type="text" name="" placeholder="Type your first name">
+        <h3>Last Name : </h3>
+        <input type="text" name="" placeholder="Type your last name">
         <h3>Email : </h3>
         <input type="email" name="" placeholder="Type your email">
         <h3>Password : </h3>
         <input type="password" name="" placeholder="Type your password">
 
-        <button onclick="location.href='index.html';">LOGIN</button>
-        <div id="registerSection"><a onclick="location.href='register.html';">Register</a></div>
+        <button onclick="location.href='index.html';">REGISTER</button>
 
     </div>
 
