--- a/main.html
+++ b/main.html
@@ -181,7 +181,7 @@
 
       <div id="Transportation" class="tabcontent">
         <div id="activity1">
-          <img src="img/destNS.jpg">
+          <img src="img/destNS.png">
           <h4>NS</h4>
           <p class="dutch">Reisplanner voor binnenlandse en internationale treinreizen, informatie over prijzen van treinkaartjes en abonnementen, tips voor dagjes uit en informatie. </p>
           <p class="english">Travel planner for domestic and international train journeys, information about train ticket prices and subscriptions, tips for days out and information. </p>
@@ -190,7 +190,7 @@
           <button id="like" onclick="openTab(event, 'Favourites')"></button>
         </div>
 <div id="activity2">
-          <img src="img/destGvb.jpg">
+          <img src="img/destGVB.png">
           <h4>GVB</h4>
           <p class="dutch">GVB is de openbaar vervoerder van Amsterdam. Informatie over routes, reisproducten, tarieven, vertrektijden en omleidingen.</p>
           <p class="english">GVB is the public transport company of Amsterdam. Information about routes, travel products, fares, departure times and diversions.</p>
@@ -198,7 +198,7 @@
           <button id="like" onclick="openTab(event, 'Favourites')"></button>
         </div>
 <div id="activity3">
-          <img src="img/destOV9292.jpg">
+          <img src="img/destOV9292.png">
           <h4>OV9292</h4>
           <p class="dutch">9292 is het online platform voor al het openbaar & deelvervoer in Nederland met actuele reisinformatie & e-tickets. </p>
           <p class="english">9292 is the online platform for all public & shared transport in the Netherlands with up-to-date travel information & e-tickets. </p>
