--- a/login.html
+++ b/login.html
@@ -9,7 +9,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
-<h1 id = "title" onclick="location.href='index.html';"> TripToGo </h1>
+    <p id = "eng_button" onclick="changeLanguage('english')"><br></p>
+    <p id = "dut_button" onclick="changeLanguage('dutch')"><br></p>
+    <img src="img/logo.png" onclick="location.href='index.html'" style="height:84px;">
+    <h1 id = "title" onclick="location.href='index.html';"> TripToGo </h1>
     <div class="loginBox">
         <h1>Login</h1>
 
